--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,7 @@ account_id = ""
 workers_dev = true
 usage_model = "unbound"
 compatibility_date = "2022-08-01"
+send_metrics = false
 
 [vars]
 lokiHost = "https://logs-prod-us-central1.grafana.net/loki/api/v1/push"
